<resources>
    <string name="app_name">Radiant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string-array name="services">
        <item>Choose a service: </item>
        <item>Consultation</item>
        <item>Antenatal Care</item>
        <item>Antenatal classes</item>
        <item>Sonar</item>
        <item>Births</item>
        <item>Home visits</item>
        <item>Baby care</item>
        <item>Immunisations</item>
        <item>Postnatal care</item>
        <item>Family planning</item>
    </string-array>
    <string name="products">Products</string>
    <string name="appointments">Appointments</string>
    <string name="community">Community</string>
    <string name="chat">Chat</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="login">Already have an account? Log in</string>
    <string name="password_">Password</string>
    <string name="email">Email address</string>
    <string name="signup">Sign up</string>
    <string name="radiant_text">Radiant clinic</string>
    <string name="info_radiantclinic_com">info@radiantclinic.com</string>
    <string name="title_activity_home_">Home</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">See profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="payment_confrim">The payment ID above is to confirm your proof of payment. Please keep this ID safe as it will be used as a means of tracking your payment in case of a refund.  </string>
    <string name="password">Enter a password</string>
    <string name="resetpassword">Enter your email address and we\'ll send you a link to change your password. If you still need help, visit our Help Centre.</string>
    <string name="forgotpassword">Reset your password</string>
    <string name="payment_method">Payment method</string>
    <string name="home_nav">Home</string>
    <string name="slogan">Saving Lives, Changing Hearts!</string>
    <string name="create_an_account">create an account</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_">Phone number</string>
    <string name="relation">Relation</string>
    <string name="full_names">Full names</string>
    <string name="relative_that_does_not_live_at_above_address">Relative that does not live at above address:</string>
    <string name="employer">Employer</string>
    <string name="occupation">Occupation</string>
    <string name="postal_code">Postal code</string>
    <string name="town_city">Town/City</string>
    <string name="street_name">Street name</string>
    <string name="house_number_flat_number">House Number/Flat number</string>
    <string name="address">Address:</string>
    <string name="id_number">ID number</string>
    <string name="particulars_of_patient">Particulars of patient:</string>
    <string name="province">Province</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About us</string>
    <string name="find_us">Find us</string>
    <string name="book_appointment">Book appointment</string>
</resources>