<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_nav"/>
        <item android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_add"
            android:title="@string/book_appointment"/>
        <item android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/payment_method"/>
    </group>
<item android:title="@string/community">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share"/>
            </group>
            <group>
                <item android:id="@+id/find_us"
                    android:title="@string/find_us"
                    android:icon="@drawable/ic_location"/>
                <item android:id="@+id/about"
                    android:title="@string/about_us">
                </item>
                <item android:id="@+id/faq"
                    android:title="@string/faq">
                </item>
            </group>
        </menu>
</item>

</menu>
