<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appointmentBG"
    tools:context=".Activities.PatientFile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/particulars_of_patient"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_style"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/id_number"
            android:inputType="number"/>
        <EditText
            android:id="@+id/_occupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/reg_style"
            android:layout_marginTop="15dp"
            android:hint="@string/occupation"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/_employer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/reg_style"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/employer"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/address"/>

        <EditText
            android:id="@+id/_houseNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/house_number_flat_number"
            android:background="@drawable/reg_style"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/_streetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:hint="@string/street_name"
            android:background="@drawable/reg_style"
            android:inputType="text"/>
        <EditText
            android:id="@+id/_town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/town_city"
            android:background="@drawable/reg_style"
            android:inputType="text"/>
        <EditText
            android:id="@+id/_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/province"
            android:textAlignment="center"
            android:background="@drawable/reg_style"
            android:inputType="text"/>
        <EditText
            android:id="@+id/_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/reg_style"
            android:hint="@string/postal_code"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/relative_that_does_not_live_at_above_address"/>
        <EditText
            android:id="@+id/_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/reg_style"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/full_names"
            android:inputType="text"/>
        <EditText
            android:id="@+id/_relation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_style"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            android:hint="@string/relation"
            android:inputType="text"/>
        <EditText
            android:id="@+id/_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_style"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:hint="@string/phone_"
            android:inputType="phone"/>
        <Button
            android:id="@+id/_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Create file"
            android:textColor="#fff"
            android:layout_marginStart="50dp"
            android:elevation="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_radius"/>




    </LinearLayout>
</ScrollView>