<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Reset">

    <ImageView
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/forgotpassword"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_reset"
        android:background="@drawable/reg_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/tv_reset"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_reset"
        android:text="@string/resetpassword"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@android:color/black"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/tv_reset"
        android:layout_marginTop="25dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/btn_reset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_reset"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:src="@drawable/rightarrow"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        />

</RelativeLayout>