<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2020"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/_userPhoto"
        android:layout_width="96dp"
        android:layout_height="144dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="131dp"
        android:src="@drawable/undraw_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Add a picture"
            android:textColor="@color/white"
            android:layout_below="@+id/_userPhoto"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_userPhoto"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/reg_style"
            android:hint="Title"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/reg_style"
            android:hint="Full name"
            android:inputType="textPersonName"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="325dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/reg_style"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/reg_style"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/reg_style"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/_password"
        android:layout_marginTop="13dp"
        android:indeterminate="false"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/_loginTv"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_signUp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="76dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login"
        android:textStyle="" />

    <ImageView
        android:id="@+id/_signUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="67dp"
        android:src="@drawable/rightarrow"
        android:textColor="@android:color/black" />

    </RelativeLayout>
</ScrollView>